compiler/eight-tests/tests/snapshots/hir/compiler_tests__hir@fma.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for hir
info:
  program: eightc
  args:
    - "--emit-hir"
    - "--terminator=hir"
    - tests/hir-lower/fma.test
input_file: compiler/eight-tests/tests/hir-lower/fma.test
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
hir_module {
  declares {
    // module types
    
    
    // module struct types
    struct vec512 {
      vs: *i32,
    }
    
    // module functions
    fn malloc<$1'0>(size: i32) -> *$1'0;
    fn vec512_fma(x: vec512, y: vec512, acc: vec512) -> vec512;
    
    // module traits
    trait Add<$1'0, $1'1, $1'2> {
      fn add(a: $1'0, b: $1'1) -> $1'2;
    }
    trait Div<$1'0, $1'1, $1'2> {
      fn div(a: $1'0, b: $1'1) -> $1'2;
    }
    trait Mul<$1'0, $1'1, $1'2> {
      fn mul(a: $1'0, b: $1'1) -> $1'2;
    }
    trait Ord<$1'0, $1'1> {
      fn ge(a: $1'0, b: $1'1) -> bool;
      fn gt(a: $1'0, b: $1'1) -> bool;
      fn le(a: $1'0, b: $1'1) -> bool;
      fn lt(a: $1'0, b: $1'1) -> bool;
    }
    
    // module instances
    instance Div<i32, i32, i32> {
      fn div(a: i32, b: i32) -> i32;
    }
    instance Add<i32, i32, i32> {
      fn add(a: i32, b: i32) -> i32;
    }
    instance Mul<i32, i32, i32> {
      fn mul(a: i32, b: i32) -> i32;
    }
    instance Ord<i32, i32> {
      fn ge(a: i32, b: i32) -> bool;
      fn gt(a: i32, b: i32) -> bool;
      fn le(a: i32, b: i32) -> bool;
      fn lt(a: i32, b: i32) -> bool;
    }
  }
  
  defining {
    // module functions
    fn vec512_fma<>(x: vec512, y: vec512, acc: vec512) -> vec512 {
      let vs: vec512 = (new vec512 {
        vs: ((malloc::<i32> as fn(i32)->*i32)(((@@builtin_i32_div as fn(i32, i32)->i32)((512 as i32),(4 as i32)) as i32)) as *i32),
      } as vec512);
      {
        let i: i32 = (0 as i32);
        loop {
          if (((@@builtin_i32_lt as fn(i32, i32)->bool)((i as i32),((@@builtin_i32_div as fn(i32, i32)->i32)((512 as i32),(4 as i32)) as i32)) as bool)){
            ((((vs as vec512).vs as *i32)[(i as i32)] as i32) = ((@@builtin_i32_add as fn(i32, i32)->i32)(((@@builtin_i32_mul as fn(i32, i32)->i32)((((x as vec512).vs as *i32)[(i as i32)] as i32),(((y as vec512).vs as *i32)[(i as i32)] as i32)) as i32),(((acc as vec512).vs as *i32)[(i as i32)] as i32)) as i32) as unit);
            ((i as i32) = ((@@builtin_i32_add as fn(i32, i32)->i32)((i as i32),(1 as i32)) as i32) as unit);
          } else {
            break;
          }
        }
      }
      return (vs as vec512);
    }
    // module intrinsic functions
    instance Div<i32, i32, i32> {
      intrinsic_fn div<>(a: i32, b: i32) -> i32;
    }
    instance Add<i32, i32, i32> {
      intrinsic_fn add<>(a: i32, b: i32) -> i32;
    }
    instance Mul<i32, i32, i32> {
      intrinsic_fn mul<>(a: i32, b: i32) -> i32;
    }
    instance Ord<i32, i32> {
      intrinsic_fn lt<>(a: i32, b: i32) -> bool;
      intrinsic_fn gt<>(a: i32, b: i32) -> bool;
      intrinsic_fn le<>(a: i32, b: i32) -> bool;
      intrinsic_fn ge<>(a: i32, b: i32) -> bool;
    }
  
  }
}
eightc: early termination due to: --terminator=hir
