compiler/eight-tests/tests/snapshots/hir/compiler_tests__hir@intrinsic_declaration.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for hir
info:
  program: eightc
  args:
    - "--emit-hir"
    - "--terminator=hir"
    - tests/hir-lower/intrinsic_declaration.test
input_file: compiler/eight-tests/tests/hir-lower/intrinsic_declaration.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
hir_module {
  declares {
    // module types
    
    
    // module struct types
    
    
    // module functions
    fn malloc<$1'0>(size: i32) -> *$1'0;
    
    // module traits
    
    
    // module instances
  
  }
  
  defining {
    // module functions
    
    // module intrinsic functions
    
  
  }
}
eightc: early termination due to: --terminator=hir
