compiler/eight-tests/tests/snapshots/hir/compiler_tests__hir@traits.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for hir
info:
  program: eightc
  args:
    - "--emit-hir"
    - "--terminator=hir"
    - tests/hir-lower/traits.test
input_file: compiler/eight-tests/tests/hir-lower/traits.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
hir_module {
  declares {
    // module types
    
    
    // module struct types
    
    
    // module functions
    
    
    // module traits
    trait Add<$1'0, $1'1, $1'2> {
      fn add(a: $1'0, b: $1'1) -> $1'2;
    }
    trait And<$1'0, $1'1, $1'2> {
      fn and(a: $1'0, b: $1'1) -> $1'2;
    }
    trait Div<$1'0, $1'1, $1'2> {
      fn div(a: $1'0, b: $1'1) -> $1'2;
    }
    trait Eq<$1'0, $1'1> {
      fn eq(a: $1'0, b: $1'1) -> bool;
      fn neq(a: $1'0, b: $1'1) -> bool;
    }
    trait Mul<$1'0, $1'1, $1'2> {
      fn mul(a: $1'0, b: $1'1) -> $1'2;
    }
    trait Neg<$1'0, $1'1> {
      fn neg(a: $1'0) -> $1'1;
    }
    trait Or<$1'0, $1'1, $1'2> {
      fn or(a: $1'0, b: $1'1) -> $1'2;
    }
    trait Ord<$1'0, $1'1> {
      fn ge(a: $1'0, b: $1'1) -> i32;
      fn gt(a: $1'0, b: $1'1) -> i32;
      fn le(a: $1'0, b: $1'1) -> i32;
      fn lt(a: $1'0, b: $1'1) -> i32;
    }
    trait Rem<$1'0, $1'1, $1'2> {
      fn rem(a: $1'0, b: $1'1) -> $1'2;
    }
    trait Sub<$1'0, $1'1, $1'2> {
      fn sub(a: $1'0, b: $1'1) -> $1'2;
    }
    
    // module instances
  
  }
  
  defining {
    // module functions
    
    // module intrinsic functions
    
  
  }
}
eightc: early termination due to: --terminator=hir
